unpackaged/pre/first/objects/Children_at_Risk_Data__c.object
<CustomObject>
    <fields>
        <fullName>Achievement_Index_Percentile__c</fullName>
        <label>Achievement Index Percentile</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>African_American_Students__c</fullName>
        <label>African-American Students</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campus_Performance_Index_Percentile__c</fullName>
        <label>Campus Performance Index Percentile</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Composite_Index_Percentile__c</fullName>
        <label>Composite Index Percentile</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographically_Adjusted_Deviation_Score__c</fullName>
        <label>Demographically Adjusted Deviation Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economically_Disadvantaged__c</fullName>
        <label>Economically Disadvantaged</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Greater_Houston_Ranking__c</fullName>
        <label>Greater Houston Ranking</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_Index_Percentile__c</fullName>
        <label>Growth Index Percentile</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hispanic_Students__c</fullName>
        <label>Hispanic Students</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Letter_Grade__c</fullName>
        <label>Letter Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Math_Gain_Score__c</fullName>
        <label>Math Gain Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Race_Ethnicity_Students__c</fullName>
        <label>Other Race/Ethnicity Students</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reading_Gain_Score__c</fullName>
        <label>Reading Gain Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAAR_Math_Advanced__c</fullName>
        <label>STAAR Math - Advanced</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAAR_Reading_Advanced__c</fullName>
        <label>STAAR Reading - Advanced</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Children at Risk Data</relationshipLabel>
        <relationshipName>Children_at_Risk_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Rank__c</fullName>
        <label>State Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Enrollment__c</fullName>
        <label>Student Enrollment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_Students__c</fullName>
        <label>White Students</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Children at Risk Data</label>
    <nameField>
        <displayFormat>CAR{YYYY}-{00}</displayFormat>
        <label>Children at Risk Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children at Risk Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>